# agusemu

./: .gitignore  FLATHUB.md  README.md  pyproject.toml
agusemu/: __init__.py  cli.py  config.py  deps.py  desktop.py  icons.py  integrate.py  launcher.py  library.py  main.py  models.py  runtimes.py  webview2.py  winetools.py
agusemu/ui/: add_app_dialog.py  detail_view.py  install_dialog.py  log_window.py  main_window.py  runtime_manager.py  winetricks_dialog.py
docs/superpowers/plans/: 2026-07-01-agusemu.md
docs/superpowers/specs/: 2026-07-01-agusemu-design.md
flatpak/: agusemu-launcher.sh  com.patopo.AgusEmu.desktop  com.patopo.AgusEmu.metainfo.xml  com.patopo.AgusEmu.yaml  io.github.Envyana.AgusEmu.desktop  io.github.Envyana.AgusEmu.metainfo.xml  io.github.Envyana.AgusEmu.yaml
packaging/: AgusEmu.desktop  README-appimage.md  build-appimage.sh
tests/: test_cli.py  test_config.py  test_deps.py  test_desktop.py  test_icons.py  test_integrate.py  test_launcher.py  test_library.py  test_models.py  test_new_features.py  test_runtimes_download.py  test_runtimes_ensure.py  test_runtimes_releases.py  test_runtimes_scan.py  test_stability_fixes.py  test_ui_smoke.py  test_winetools.py
