[project]
name = "agusemu"
version = "0.1.0"
description = "Menjalankan .exe Windows di Linux via GE-Proton (umu-launcher)"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agusemu = "agusemu.main:main"
agusemu-cli = "agusemu.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agusemu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
