[project]
name = "agusemu"
version = "0.3.1"
description = "Menjalankan .exe Windows di Linux via GE-Proton (umu-launcher)"
requires-python = ">=3.14"
license = "GPL-3.0-or-later"
dependencies = []
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Environment :: X11 Applications :: GTK",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agusemu = "agusemu.main:main"
agusemu-cli = "agusemu.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agusemu*"]

[tool.setuptools.package-data]
"agusemu.ui" = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
